There was a slight problem with the position of the email on mobile. it worked fine on my browser at the appropriate scale in the dev tools emulator but not on my phone. This is a test to see if the changes I made will allow it to be positioned correctly on mobile

--- a/resources/style.css
+++ b/resources/style.css
@@ -79,7 +79,7 @@ nav h1, nav h2 {
 }
 
 .about h1 {
-	position: relative;
+	
 	margin-top: 0;
 }
 
@@ -657,11 +657,10 @@ footer form textarea {
 	text-align: center;
 }
 
-.phone2 {
-	display: hidden;
+
+.email2m {
+	display: none;
 }
-
-
 
 
 
@@ -853,7 +852,6 @@ footer form textarea {
 	}
 
 
-
 	.hamburger {
 		position: relative;
 		display: flex;
@@ -923,20 +921,13 @@ footer form textarea {
 		max-height: 50%;
 	} 
 
-	footer p {
-		
-		}
 
 	.about, .projects {
 		margin-left: 0px;
 		margin-right: 0px;
 	}
 
-	.email {
-		order: 1;
-		width: 200px;
-		text-align: center;
-	}
+
 
 	.contact {
 		text-align: center;
@@ -955,15 +946,27 @@ footer form textarea {
 	.emailcontainer {
 		order: 1;
 		display: flex;
+		flex-direction: column;
 		justify-content: center;
-		width: 200px;
+		align-items: center;
+		width: 250px;
+	}
+
+	.email {
+	margin-bottom: 0px;
+	width: 200px;
+	text-align: center;
 	}
 	
 	.email2 {
-		position: relative;
-		right: 20px;
-		
+	display: none;
 	}
+
+	.email2m {
+	margin-top: 5px;
+	display: block;
+	
+}
 
 		
 
